Improve trading pipeline and strategy backtesting